Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/enum/EnumPublicConstructor.out
EnumPublicConstructor.java:16:12: compiler.err.mod.not.allowed.here: public
1 error
